@@ -1,4 +1,8 @@
-rev 470 (2016-04-11) (krueschan)
+rev 471 (2016-04-14) (krueschan)
+- further revisions to splash page (R-C weight is now a slider)
+- hotlinked to "cloud-hosted" versions of jquery code (on code.jquery.com) instead of locally hosted files
+
+    rev 470 (2016-04-11) (krueschan)
 - changed elements on the Equity Splash page around (now responsibiliy and capability on the 3x3 equity dial pad)
 - now using a svg version of the logo instead of png for cleaner rendering
 
